deployment/history-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-service
spec:
  selector:
    matchLabels:
      app: history-service-app
  template:
    metadata:
      labels:
        app: history-service-app
    spec:
      serviceAccountName: cs3219-group8
      containers:
      - name: history-service-app
        image: us-central1-docker.pkg.dev/peerprep-363807/history-service/history-service-image:latest
        # This app listens on port 8004 for web traffic.
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: history-service
spec:
  type: NodePort
  selector:
    app: history-service-app
  ports:
  - port: 8004 # port in service
    targetPort: 8004 # port in deployment
