deployment/question-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-service
spec:
  selector:
    matchLabels:
      app: question-service-app
  template:
    metadata:
      labels:
        app: question-service-app
    spec:
      serviceAccountName: cs3219-group8
      containers:
      - name: question-service-app
        image: us-central1-docker.pkg.dev/peerprep-363807/question-service/question-service-image:latest
        # This app listens on port 8002 for web traffic.
        ports:
        - containerPort: 8002
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=peerprep-363807:us-central1:question-service=tcp:5432"
        securityContext:
          runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: question-service
spec:
  type: NodePort
  selector:
    app: question-service-app
  ports:
  - port: 8002 # port in service
    targetPort: 8002 # port in deployment
