deployment/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      serviceAccountName: cs3219-group8
      containers:
      - name: user-service-app
        image: us-central1-docker.pkg.dev/peerprep-363807/user-service/user-service-image:latest
        # This app listens on port 8000 for web traffic.
        ports:
        - containerPort: 8000
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=peerprep-363807:us-central1:user-service=tcp:5432"
        securityContext:
          runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service-app
  ports:
  - port: 8000 # port in service
    targetPort: 8000 # port in deployment
