deployment/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gateway-ip
  name: gateway
spec:
  rules:
  - http:
      paths:
      - path: /user-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 8000
      - path: /matching-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: matching-service
            port:
              number: 8001
      - path: /question-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: question-service
            port:
              number: 8002
      - path: /history-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: history-service
            port:
              number: 8004
      - path: /communication-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: communication-service
            port:
              number: 8005
      - path: /collab-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: collab-service
            port:
              number: 8006
