deployment/gateway2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gateway-ip
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gateway
spec:
  rules:
  - http:
      paths:
      - path: /collab-api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: collab-service
            port:
              number: 8006
